<resources>
    <string name="app_name">测试</string>
    <string name="datetime_dialog_show">show_datetime</string>
    <string name="datetime_dialog_title">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="enter">确定</string>
    <string name="back_now">现在</string>
</resources>